kubernetes/uservice-nbreport-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: u-nbreport
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: u-nbreport
    spec:
      containers:
        - name: u-nbreport
          imagePullPolicy: 'Always'
          image: 'lsstsqre/uservice-nbreport:tickets-DM-15380'
          ports:
            - containerPort: 5000
              name: u-nbreport
