kubernetes/uservice-nbreport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: u-nbreport
  labels:
    name: u-nbreport
spec:
  type: NodePort
  ports:
  - name: http
    port: 5007 # NOTE: must not conflict with any other services
    targetPort: 5000
    protocol: TCP
  selector:
    name: u-nbreport
